# ChangeLog for media-libs/libwpg
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libwpg/ChangeLog,v 1.16 2011/04/20 12:19:10 pacho Exp $

*libwpg-0.2.0 (20 Apr 2011)

  20 Apr 2011; Pacho Ramos <pacho@gentoo.org> +libwpg-0.2.0.ebuild:
  Version bump, thanks to scarabeus for his help.

  15 Nov 2010; Fabian Groffen <grobian@gentoo.org> libwpg-0.1.3.ebuild:
  Marked ~x86-linux, bug #344857

  27 Aug 2010; Raúl Porcel <armin76@gentoo.org> libwpg-0.1.3.ebuild:
  alpha/ia64 stable wrt #326501

  16 May 2010; Raúl Porcel <armin76@gentoo.org> libwpg-0.1.3.ebuild:
  Add ~alpha/~ia64 wrt #316219

  30 Jan 2010; Raúl Porcel <armin76@gentoo.org> libwpg-0.1.3.ebuild:
  sparc stable wrt #284453

  26 Jan 2010; Fabian Groffen <grobian@gentoo.org> libwpg-0.1.3.ebuild:
  Marked ~amd64-linux (bug #302290)

  10 Jan 2010; Jeroen Roovers <jer@gentoo.org> libwpg-0.1.3.ebuild:
  Stable for HPPA (bug #284453).

  05 Jan 2010; Joseph Jezak <josejx@gentoo.org> libwpg-0.1.3.ebuild:
  Marked ppc/ppc64 stable for bug #284453.

  27 Dec 2009; Raúl Porcel <armin76@gentoo.org> libwpg-0.1.3.ebuild:
  Add ~sparc wrt #273966

  19 Dec 2009; Fabian Groffen <grobian@gentoo.org> libwpg-0.1.3.ebuild:
  Marked ~x86-macos, ~x64-macos, ~x64-solaris, ~sparc-solaris and
  ~sparc64-solaris

  18 Dec 2009; Fabian Groffen <grobian@gentoo.org> libwpg-0.1.3.ebuild:
  Marked ~x86-solaris and ~ppc-macos, new dependency for inkscape

  27 Nov 2009; Mark Loeser <halcy0n@gentoo.org> libwpg-0.1.3.ebuild:
  Mark ~ppc64 for bug #273966

  15 Oct 2009; Markus Meier <maekke@gentoo.org> libwpg-0.1.3.ebuild:
  amd64/x86 stable, bug #284453

  05 Oct 2009; Mounir Lamouri <volkmar@gentoo.org> libwpg-0.1.3.ebuild:
  Keywording for ppc, bug 273966

  15 Jun 2009; Jeroen Roovers <jer@gentoo.org> libwpg-0.1.3.ebuild:
  Marked ~hppa (bug #273966).

*libwpg-0.1.3 (01 May 2009)

  01 May 2009; Tomas Chvatal <scarabeus@gentoo.org> +libwpg-0.1.3.ebuild,