@@ -3,14 +3,15 @@ Hash: SHA1
 
 DIST libwpg-0.1.3.tar.bz2 285550 RMD160 b4a51403491dcc5679c99b3b82737892648ca054 SHA1 1ab29ea5b7f01e8fb351361ed5e9e800321b67d3 SHA256 47f5c8d31e1b18d8f3b73a3dbbf78b6a2c4230b00f0be56e3547c56a867fd520
 DIST libwpg-0.2.0.tar.bz2 326684 RMD160 0169a85c75040dd96b03702c5d2cd67dfded6d1f SHA1 34a692566bda66488f83c635774d1bd92cee0fdf SHA256 d823f4b2ddfe349cca09e40bd57af8220e8bf935bcfb66be520e02ba4d327dc6
+EBUILD libwpg-0.1.3-r1.ebuild 1629 RMD160 f1bbb93ecc0ecd5758752039009ec0981e54ea97 SHA1 5f0d46e0d31b02c1c330f4ae09511517049b7ea2 SHA256 755dc23388c2e08b9af9e1e46b3de67f0c5cfb36c58b2a44434b8aac425ee0ca
 EBUILD libwpg-0.1.3.ebuild 825 RMD160 454017c81c9a5ff0b693b88096efdfc9968af77b SHA1 e3fd9cdd270bd5ce77377d6e001ceacaf8e9e239 SHA256 03ab0902e0bb839ed03e4a801fe8587f667a31e65e6d8d68151dd6b9927fdc20
-EBUILD libwpg-0.2.0.ebuild 956 RMD160 50c1055489c0b111c6f74dda8c2ca0d9e600ad9b SHA1 5bc48f09e4e48e5ca9ac5b6851e9650639161b88 SHA256 3b5ddf14ed5ccf1e6b438767d010ffc876eb641cb078388f4b9a31a073d7bdf4
-MISC ChangeLog 2050 RMD160 4502c57b481c7e0b3ec5820c98b20fb60441573b SHA1 d41e621e2a0e7e6cd8acb83f3d815f70dd98a6a0 SHA256 63f5af4457a89462cc3c4079a0d790b5a1a9440ee3826d9c1cd3eb1c5aa97f0e
-MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
+EBUILD libwpg-0.2.0.ebuild 1635 RMD160 9e88720a1e13fa1ee665561828650a5abc4ca25c SHA1 050d1b22226b02e837bc2996a06679a0e92bdd29 SHA256 d8ffa97a8cdb798792d4270e8886de072dc489209f5fe23295f630d4b3e4f0f2
+MISC ChangeLog 2215 RMD160 137216cd5410d68c6e5fff48c771db243160a2cf SHA1 101738ade101d7f112fb986ba72a84d380efa003 SHA256 82e57e1e7b22362aeec0436f4d16674c27cb4a0bfae1bff5718993e26ce14470
+MISC metadata.xml 222 RMD160 f886df34a2e2ab5dec6a9b4eb154d37ade9ea977 SHA1 fb8e8bfe95993793f579d3a842fcf69b9c11462c SHA256 27fe41ff354ef423be79c6d75cc3ff75ba7ec53a02942d7c7f15140bd6330eff
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk2uz0QACgkQCaWpQKGI+9SHXQCcCvOYXUqhkzJu8b08vUf3qeFK
-MT0An1NjNqc6+c8gh31JnGAi/TQ26mBe
-=QTTw
+iEYEARECAAYFAk20WjUACgkQ1fmVwcYIWAZ8ugCeNVzGjMNexCZ1naASb5di1Uaw
+VIkAn29ZHmnyf9JlCEvc6QKME6DqVnKg
+=9HtE
 -----END PGP SIGNATURE-----
