@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/libwpg
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libwpg/ChangeLog,v 1.16 2011/04/20 12:19:10 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libwpg/ChangeLog,v 1.17 2011/04/24 17:13:19 eva Exp $
+
+*libwpg-0.1.3-r1 (24 Apr 2011)
+
+  24 Apr 2011; Gilles Dartiguelongue <eva@gentoo.org> +libwpg-0.1.3-r1.ebuild,
+  libwpg-0.2.0.ebuild, metadata.xml:
+  Slot revisions.
 
 *libwpg-0.2.0 (20 Apr 2011)
 
